load("@bazel_skylib//rules:common_settings.bzl", "string_setting")

string_setting(
    name = "rule_setting",
    build_setting_default = "unset",
    visibility = ["//visibility:public"],
)

string_setting(
    name = "with_cfg_setting",
    build_setting_default = "unset",
    visibility = ["//visibility:public"],
)
