load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")

cc_library(
    name = "lib",
    srcs = ["lib.cpp"],
    hdrs = ["lib.h"],
    tags = ["manual"],
    visibility = ["//dynamic_deps:__pkg__"],
)

cc_shared_library(
    name = "shared",
    tags = ["manual"],
    visibility = ["//dynamic_deps:__pkg__"],
    deps = [":lib"],
)
